[package]
name = "crab-net"
version = "0.0.3"
edition = "2024"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "<TCP|UDP> + TLS packets generator"
readme = "README.md"
homepage = "https://github.com/newfla/crab-net"
repository = "https://github.com/newfla/crab-net"
keywords = ["cli", "udp", "tcp", "tls", "traffic"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
fastrand = "2.1.0"
clap = "4.5.8"
byte-unit = "5.1.4"
coarsetime = "0.1.34"
tokio = { version = "1.38.0", features = ["full"] }
tokio-dtls-stream-sink = "0.6.0"
openssl = { version = "0.10.64", features = ["vendored"] }
tokio-native-tls = "0.3.1"
kanal = "0.1.0-pre8"
derive-new = "0.7.0"
mimalloc = { version = "0.1.43", default-features = false }

[profile.release]
lto = true
strip = true
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
